--- a/projects/sfx-client/web/index.html
+++ b/projects/sfx-client/web/index.html
@@ -25,6 +25,7 @@
       });
     }
   </script>
+  <script type="module" src="./bundle.js"></script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
