--- a/projects/sfx-client/web/index.html
+++ b/projects/sfx-client/web/index.html
@@ -25,7 +25,7 @@
       });
     }
   </script>
-  <script src="./packages/dist/index.js" type="module"></script>
+  <script src="./dist/index.js" type="module"></script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
