--- a/projects/sfx-client/index.html
+++ b/projects/sfx-client/index.html
@@ -5,6 +5,7 @@
     <title>诉记</title>
 </head>
 <body>
-<script src="./index.js" type="module"></script>
+<div id="root"></div>
+<script src="src/debug.jsx" type="module"></script>
 </body>
 </html>
