--- a/projects/sfx-client/web/index.html
+++ b/projects/sfx-client/web/index.html
@@ -16,9 +16,15 @@
 
     <title>诉记</title>
     <link href="manifest.json" rel="manifest">
+  <script type="module" crossorigin src="/assets/index.98ca1ea7.js"></script>
+  <link rel="modulepreload" href="/assets/object-assign.9840bf7d.js">
+  <link rel="modulepreload" href="/assets/react.ab051c82.js">
+  <link rel="modulepreload" href="/assets/scheduler.2d11f3d4.js">
+  <link rel="modulepreload" href="/assets/react-dom.e231b426.js">
 </head>
 <body>
-<script src="./dist/index.js" type="application/javascript"></script>
+<div id="root"></div>
+
 <script src="main.dart.js" type="application/javascript"></script>
 <script>
     if ('serviceWorker' in navigator) {
