修复长度超出范围或者字符集全部选择false导致异常的问题

--- a/projects/sfx-client/web/index.html
+++ b/projects/sfx-client/web/index.html
@@ -16,15 +16,9 @@
 
     <title>诉记</title>
     <link href="manifest.json" rel="manifest">
-  <script type="module" crossorigin src="/assets/index.98ca1ea7.js"></script>
-  <link rel="modulepreload" href="/assets/object-assign.9840bf7d.js">
-  <link rel="modulepreload" href="/assets/react.ab051c82.js">
-  <link rel="modulepreload" href="/assets/scheduler.2d11f3d4.js">
-  <link rel="modulepreload" href="/assets/react-dom.e231b426.js">
 </head>
 <body>
-<div id="root"></div>
-
+<script type="module" src="./dist/index.js"></script>
 <script src="main.dart.js" type="application/javascript"></script>
 <script>
     if ('serviceWorker' in navigator) {
