--- a/projects/couch/index.html
+++ b/projects/couch/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <div id="root"></div>
-<script type="module" src="/src/index.ts"></script>
+<script type="module" src="/index.js"></script>
 </body>
 </html>
