--- a/projects/couch/example/index.html
+++ b/projects/couch/example/index.html
@@ -2,9 +2,10 @@
 <html lang="zh">
 <head>
     <title>Stele Editor</title>
+    <link rel="stylesheet" href="./src/index.scss" />
 </head>
 <body>
 <div id="root"></div>
-<script type="module" src="./index.js"></script>
+<script type="module" src="./src/index.tsx"></script>
 </body>
 </html>
