--- a/projects/pillow/example/web/index.html
+++ b/projects/pillow/example/web/index.html
@@ -36,6 +36,7 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+  <script src="http://127.0.0.1:3000/src/index.tsx" type="module"></script>
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
