通过传参的形式初始化插件依赖的js文件，而不是直接在html文件中引用（因为要考虑开发和生产环境）

--- a/projects/client/web/index.html
+++ b/projects/client/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -14,7 +14,6 @@
     <link href="manifest.json" rel="manifest">
 </head>
 <body>
-<script src="http://127.0.0.1:3000/src/index.tsx" type="module"></script>
 <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
